set lacation flashlight

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 </body>
 <script src="model/bug.js"></script>
+<script src="model/flashlight.js"></script>
 <script src="model/chessboard.js"></script>
 <script src="model/game.js"></script>
 
