rotate flashlight image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 </body>
+<script src="utils/angle.js"></script>
 <script src="model/bug.js"></script>
 <script src="model/flashlight.js"></script>
 <script src="model/chessboard.js"></script>
