add utils matrix

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 </body>
+<script src="utils/algorithm.js"></script>
+<script src="utils/matrix.js"></script>
 <script src="utils/angle.js"></script>
 <script src="model/bug.js"></script>
 <script src="model/flashlight.js"></script>
