--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 </body>
-
+<script src="utils/level.js"></script>
 <script src="utils/matrix.js"></script>
 <script src="utils/algorithm.js"></script>
 <script src="utils/angle.js"></script>
