add cookie level

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 </body>
+<script src="utils/cookie.js"></script>
 <script src="utils/level.js"></script>
 <script src="utils/matrix.js"></script>
 <script src="utils/algorithm.js"></script>
