--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="utils/algorithm.js"></script>
 <script src="utils/angle.js"></script>
 <script src="model/bug.js"></script>
+<script src="model/symmetry.js"></script>
 <script src="model/flashlight.js"></script>
 <script src="model/chessboard.js"></script>
 <script src="model/game.js"></script>
