--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
 <body>
 </body>
-<script src="utils/cookie.js"></script>
-<script src="utils/level.js"></script>
-<script src="utils/matrix.js"></script>
-<script src="utils/algorithm.js"></script>
-<script src="utils/angle.js"></script>
-<script src="model/bug.js"></script>
-<script src="model/symmetry.js"></script>
-<script src="model/flashlight.js"></script>
-<script src="model/chessboard.js"></script>
-<script src="model/game.js"></script>
+<script src="./utils/cookie.js"></script>
+<script src="./utils/level.js"></script>
+<script src="./utils/matrix.js"></script>
+<script src="./utils/algorithm.js"></script>
+<script src="./utils/angle.js"></script>
+<script src="./model/messager.js"></script>
+<script src="./model/bug.js"></script>
+<script src="./model/symmetry.js"></script>
+<script src="./model/flashlight.js"></script>
+<script src="./model/chessboard.js"></script>
+<script src="./model/game.js"></script>
 
 </html>
