--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/web/favicon.ico" type="image/x-icon">
+    <meta property="og:image" content="./assets/images/web/CatchBugs.png">
     <title>Catch bugs | HaiZuka</title>
 </head>
 
