--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/web/favicon.ico" type="image/x-icon">
-    <meta property="og:image" content="./assets/images/web/CatchBugs.png">
+    <meta property="og:image" content="./assets/images/web/CatchBugs.jpg">
     <title>Catch bugs | HaiZuka</title>
 </head>
 
