--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:image" content="https://github.com/zukahai/catch-bugs/blob/main/assets/images/web/CatchBugs.jpg">
+    <meta property="og:image" content="./assets/images/web/CatchBugs.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/web/favicon.ico" type="image/x-icon">
