--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 </body>
+<script src="./utils/fps.js"></script>
 <script src="./utils/cookie.js"></script>
 <script src="./utils/level.js"></script>
 <script src="./utils/matrix.js"></script>
