Init load images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 </body>
 <script src="./utils/fps.js"></script>
+<script src="./utils/imageLoader.js"></script>
 <script src="./utils/cookie.js"></script>
 <script src="./utils/level.js"></script>
 <script src="./utils/matrix.js"></script>
