--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div id="loading" class="image-container">
+        <img src="./assets/images/web/load.gif" alt="loading">
+        <h3>Loading...</h3>
+    </div>
 </body>
 <script src="./utils/fps.js"></script>
 <script src="./utils/imageLoader.js"></script>
