update logo vku

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/web/favicon.ico" type="image/x-icon">
-    <title>Catch bugs game | HaiZuka</title>
+    <title>Catch bugs game | VKU - HaiZuka</title>
 </head>
 
 <body>
