--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
 </body>
 <script src="./utils/fps.js"></script>
+<script src="./utils/localstorage.js"></script>
 <script src="./utils/imageLoader.js"></script>
 <script src="./utils/cookie.js"></script>
 <script src="./utils/level.js"></script>
