done draw info player in chessboard

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="./utils/matrix.js"></script>
 <script src="./utils/algorithm.js"></script>
 <script src="./utils/angle.js"></script>
+<script src="./model/player.js"></script>
 <script src="./model/mesenger.js"></script>
 <script src="./model/bug.js"></script>
 <script src="./model/symmetry.js"></script>
