update redrice login

--- a/login/index.html
+++ b/login/index.html
@@ -217,6 +217,9 @@
                 // Lưu lại playerCurrent vào localStorage
                 localStorage.setItem("playerCurrent", JSON.stringify(playerCurrent));
                 console.log(playerCurrent);
+
+                // chuyển hướng sang trong home
+                window.location.href = "../";
             }
         </script>
 
