--- a/highscore/index.html
+++ b/highscore/index.html
@@ -31,6 +31,7 @@
                                     <th>#</th>
                                     <th>Tên người chơi</th>
                                     <th>Số điện thoại</th>
+                                    <th>Trường</th>
                                     <th>Điểm số</th>
                                     <th></th>
                                 </tr>
@@ -71,13 +72,15 @@
                 var idCells = row.insertCell(0);
                 var nameCell = row.insertCell(1);
                 var phonenumber = row.insertCell(2);
-                var scoreCell = row.insertCell(3);
-                var deleteCell = row.insertCell(4);
+                var schoolCell = row.insertCell(3);
+                var scoreCell = row.insertCell(4);
+                var deleteCell = row.insertCell(5);
 
                 idCells.innerHTML = i + 1;
                 nameCell.innerHTML = players[i].name;
                 phonenumber.innerHTML = players[i].phonenumber;
                 scoreCell.innerHTML = players[i].score;
+                schoolCell.innerHTML = players[i].school;
                 deleteCell.innerHTML = '<button onclick="deletePlayer(' + i + ')">Xoá</button>';
             }
         }
