--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <script src="./utils/algorithm.js"></script>
 <script src="./utils/angle.js"></script>
 <script src="./model/player.js"></script>
+<script src="./model/buttonManager.js"></script>
 <script src="./model/mesenger.js"></script>
 <script src="./model/bug.js"></script>
 <script src="./model/symmetry.js"></script>
