--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <script src="./model/bug.js"></script>
 <script src="./model/symmetry.js"></script>
 <script src="./model/flashlight.js"></script>
+<script src="./model/tutorial.js"></script>
 <script src="./model/chessboard.js"></script>
 <script src="./model/game.js"></script>
 
