--- a/highscore/index.html
+++ b/highscore/index.html
@@ -89,11 +89,15 @@
 
 
         function deletePlayer(index) {
+            var players = JSON.parse(localStorage.getItem("players")) || [];
             // confim delete
-            var confirmDelete = confirm("Bạn có chắc chắn muốn xoá người chơi này không?");
+            let phonenumberValue = players[index].phonenumber;
+            let phonenumberHiden = phonenumberValue.substring(0, 4) + "***" + phonenumberValue.substring(7);
+            let name = players[index].name;
+            var confirmDelete = confirm("Bạn có chắc chắn muốn xoá người chơi " + name + ", số điện thoại: " + phonenumberHiden + " không?");
             if (confirmDelete) {
                 // xóa người chơi
-                var players = JSON.parse(localStorage.getItem("players")) || [];
+
                 players.splice(index, 1);
                 localStorage.setItem("players", JSON.stringify(players));
                 console.log(players);
