--- a/register/index.html
+++ b/register/index.html
@@ -3,8 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login - Catch bugs game | VKU - HaiZuka</title>
+    <title>Register - Catch bugs game | VKU - HaiZuka</title>
     <link rel='stylesheet' href='https://urjadeveloper.com/backend/login/style.css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../utils/callApi.js"></script>
+    <script src="../utils/localstorage.js"></script>
 
 </head>
 
@@ -153,7 +157,7 @@
 
 
             <div class="inputGroup inputGroup3">
-                <button type="button" id="login" value="Đăng nhập" onclick="savePlayer()">Đăng nhập</button>
+                <button type="button" id="login" value="Đăng nhập" onclick="savePlayer()">Đăng ký</button>
             </div>
 
         </form>
@@ -175,7 +179,7 @@
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js'></script>
         <script src="./script.js"></script>
 
-        <script type="text/javascript">
+        <script async type="text/javascript">
             function savePlayer() {
                 var name = document.getElementById("loginEmail").value;
                 var school = document.getElementById("school").value;
@@ -185,50 +189,17 @@
                     alert("Vui lòng nhập đầy đủ thông tin");
                     return;
                 }
-
-                // check phone number use regex
-                var regex = /^[0-9]{10}$/;
-                if (!regex.test(phonenumber)) {
-                    alert("Số điện thoại không hợp lệ");
-                    return;
-                }
-
-                console.log(name, school, phonenumber);
-                var players = JSON.parse(localStorage.getItem("players")) || []; // lấy danh sách người chơi từ localStorage hoặc tạo mới nếu chưa có
-
-                // Tìm kiếm người chơi trong danh sách
-                var existingPlayer = players.find(function(player) {
-                    return player.phonenumber === phonenumber;
+                CallAPI.findPlayerByPhoneNumberAndGameId(phonenumber, 'catch-bugs').then((respone) => {
+                    if (respone === "")
+                        CallAPI.postPlayerScore(name, 'catch-bugs', school, phonenumber, 1);
+                });
+                CallAPI.findPlayerByPhoneNumberAndGameId(phonenumber, 'catch-bugs').then((respone) => {
+                    LocalStorage.setItem("playerCurrent", respone);
+                    console.log(LocalStorage.getItem("playerCurrent"));
+                    window.location.href = "./login.html";
                 });
 
-                if (existingPlayer) {
-                    // Nếu người chơi đã tồn tại, cập nhật điểm số của họ
-                    // existingPlayer.score = score;
-                } else {
-                    // Nếu người chơi chưa tồn tại, thêm thông tin người chơi mới vào danh sách
-                    players.push({
-                        name: name,
-                        school: school,
-                        phonenumber: phonenumber,
-                        score: 1
-                    });
-                }
 
-
-
-                // Lưu lại danh sách người chơi vào localStorage
-                localStorage.setItem("players", JSON.stringify(players));
-
-                let playerCurrent = players.find(function(player) {
-                    return player.phonenumber === phonenumber;
-                });
-
-                // Lưu lại playerCurrent vào localStorage
-                localStorage.setItem("playerCurrent", JSON.stringify(playerCurrent));
-                console.log(playerCurrent);
-
-                // chuyển hướng sang trong home
-                window.location.href = "../";
             }
         </script>
 
