--- a/register/login.html
+++ b/register/login.html
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='https://urjadeveloper.com/backend/login/style.css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="../utils/callApi.js"></script>
     <script src="../utils/localstorage.js"></script>
 
