update url apl highscore

--- a/highscore/index.html
+++ b/highscore/index.html
@@ -13,17 +13,20 @@
 <body class="bg-dark text-light">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="padding: 10px 50px; box-shadow: 0 0 10px #000000">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#">VKU Campus tour 2023</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../">Trò chơi</a>
+                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Trò chơi</a>
+                        <a class="nav-link" href="#">Điểm cao</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Điểm cao</a>
+                        <a class="nav-link" href="../register">Đăng ký tài khoản</a>
                     </li>
                 </ul>
             </div>
