update url js file

--- a/highscore/index.html
+++ b/highscore/index.html
@@ -47,8 +47,8 @@
 <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="gameScore.js"></script>
-<script src="main.js"></script>
+<script src="./gameScore.js"></script>
+<script src="./main.js"></script>
 <script !src="">
 </script>
 
