--- a/highscore/index.html
+++ b/highscore/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="#">Điểm cao</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../register">Đăng ký tài khoản</a>
+                        <a class="nav-link" href="../register/">Đăng ký tài khoản</a>
                     </li>
                 </ul>
             </div>
