--- Update login by phoneNumber other

--- a/register/login.html
+++ b/register/login.html
@@ -178,14 +178,37 @@
                     alert("Vui lòng nhập đầy đủ thông tin");
                     return;
                 }
+                // CallAPI.findPlayerByPhoneNumberAndGameId(phonenumber, 'catch-bugs').then((respone) => {
+                //     if (respone === "")
+                //         window.location.href = "";
+                // });
+                // CallAPI.findPlayerByPhoneNumberAndGameId(phonenumber, 'catch-bugs').then((respone) => {
+                //     LocalStorage.setItem("playerCurrent", respone);
+                //     console.log(LocalStorage.getItem("playerCurrent"));
+                //     window.location.href = "../";
+                // });
+
                 CallAPI.findPlayerByPhoneNumberAndGameId(phonenumber, 'catch-bugs').then((respone) => {
-                    if (respone === "")
-                        window.location.href = "";
+                    if (respone !== "") {
+                        CallAPI.setItem("playerCurrent", respone);
+                        console.log(CallAPI.getItem("playerCurrent"));
+                    }
                 });
-                CallAPI.findPlayerByPhoneNumberAndGameId(phonenumber, 'catch-bugs').then((respone) => {
-                    LocalStorage.setItem("playerCurrent", respone);
-                    console.log(LocalStorage.getItem("playerCurrent"));
-                    window.location.href = "../";
+                CallAPI.findPlayerByPhoneNumber(phonenumber).then((respone) => {
+                    console.log(respone);
+                    if (respone.check == true) {
+                        console.log("Đã tồn tại người dùng");
+                        CallAPI.postPlayerScore(respone.data.namePlayer, 'catch-bugs', respone.data.school, phonenumber, 0);
+                        LocalStorage.setItem("playerCurrent", {
+                            "namePlayer": respone.data.namePlayer,
+                            "school": respone.data.school,
+                            "phone": phonenumber,
+                            "score": 1,
+                        });
+                        window.location.href = "../";
+                    } else {
+                        alert(respone.message);
+                    }
                 });
 
 
