--- a/register/index.html
+++ b/register/index.html
@@ -181,6 +181,16 @@
         <script src="./script.js"></script>
 
         <script async type="text/javascript">
+            const form = document.querySelector('form');
+            form.addEventListener('keydown', function(event) {
+                if (event.key === 'Enter') {
+                    console.log('enter');
+                    // Xử lý khi bấm phím "Enter" trong form
+                    event.preventDefault(); // Ngăn chặn hành động mặc định của phím "Enter" (submit form)
+                    savePlayer();
+                }
+            });
+
             function savePlayer() {
                 var name = document.getElementById("loginEmail").value;
                 var school = document.getElementById("school").value;
@@ -205,8 +215,6 @@
                     console.log(LocalStorage.getItem("playerCurrent"));
                     window.location.href = "./login.html";
                 });
-
-
             }
         </script>
 
