--- a/register/login.html
+++ b/register/login.html
@@ -171,6 +171,16 @@
         <script src="./script.js"></script>
 
         <script async type="text/javascript">
+            const form = document.querySelector('form');
+            form.addEventListener('keydown', function(event) {
+                if (event.key === 'Enter') {
+                    console.log('enter');
+                    // Xử lý khi bấm phím "Enter" trong form
+                    event.preventDefault(); // Ngăn chặn hành động mặc định của phím "Enter" (submit form)
+                    savePlayer();
+                }
+            });
+
             function savePlayer() {
                 var phonenumber = document.getElementById("phonenumber").value;
 
